--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
+    "jotai": "^1.7.7",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
