--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "i18next": "^21.8.16",
     "jotai": "^1.7.7",
     "next": "12.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-i18next": "^11.18.3",
+    "react-icons": "^4.4.0",
+    "vazirmatn": "^33.0.3"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
